objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>ATT Store Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Captured</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CloseDate__c</fullName>
        <description>Value is updated when Lead Status is updated to Closed lead status. 
Value is cleared out if the status is changed back to an Awaiting Contact/Contact Initiated status.</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClosedStatus__c</fullName>
        <description>This field indicates whether the lead was closed due to a sale or no sale</description>
        <label>Closed Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed - Sale</fullName>
                </value>
                <value>
                    <fullName>Closed - No Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Moving</fullName>
                </value>
                <value>
                    <fullName>Contract Expiring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <description>Expiry Date calculated based on Lead&apos;s current Status</description>
        <label>Contact By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastContactedCall__c</fullName>
        <description>Last Contacted by Phone/Call</description>
        <label>Last Contacted - Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastContactedSMS__c</fullName>
        <label>Last Contacted - SMS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadStrength__c</fullName>
        <formula>CASE(Rating,
&quot;Priority&quot;,IMAGE(&quot;/resource/Priority&quot;,&quot;Priority&quot;,20,68), 
&quot;Standard&quot;,IMAGE(&quot;/resource/Standard&quot;,&quot;Standard&quot;,20,68), 
&quot;NONE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Strength</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerFullName__c</fullName>
        <description>Owner Full Name</description>
        <formula>IF(
BEGINS(OwnerId, &quot;005&quot;), Owner:User.FirstName &amp;&quot; &quot; &amp;Owner:User.LastName, 
IF(BEGINS(OwnerId, &quot;00G&quot;), IF(CONTAINS(Owner:Queue.QueueName,&apos;Queue&apos;),&apos;Unassigned&apos;,Owner:Queue.QueueName), null)
)</formula>
        <inlineHelpText>Owner Full Name</inlineHelpText>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredMethodofContact__c</fullName>
        <description>Preferred Method of Communication as per Contact&apos;s consent</description>
        <label>Preferred Method of Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductsDiscussed__c</fullName>
        <label>Follow Up Opportunity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Postpaid</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Internet</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>DIRECTV</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T TV</fullName>
                </value>
                <value>
                    <fullName>Protection</fullName>
                </value>
                <value>
                    <fullName>Business/Firstnet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonforClosingLead__c</fullName>
        <label>Latest Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unavailable - No Voicemail</fullName>
                </value>
                <value>
                    <fullName>Unavailable - Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Successful Call - Spoke to Customer</fullName>
                </value>
                <value>
                    <fullName>Successful Call - Customer Intends to purchase</fullName>
                </value>
                <value>
                    <fullName>Close Duplicate Lead</fullName>
                </value>
                <value>
                    <fullName>Customer Removed Consent</fullName>
                    <isActive>false</isActive>
                    <label>Customer Removed Consent</label>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                    <isActive>false</isActive>
                    <label>Emailed</label>
                </value>
                <value>
                    <fullName>SMS Sent</fullName>
                    <isActive>false</isActive>
                    <label>SMS Sent</label>
                </value>
                <value>
                    <fullName>Spoke to Customer</fullName>
                    <isActive>false</isActive>
                    <label>Spoke to Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReassignmentReason__c</fullName>
        <description>Retail Field. This field will be used to house the reason why a particular Lead was reassigned to a new rep</description>
        <label>Reassignment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field defines the Store for which this Lead record was created</description>
        <label>Employee Location</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ExpiryDate__c</columns>
        <columns>PreferredMethodofContact__c</columns>
        <columns>LeadStrength__c</columns>
        <columns>LastContactedSMS__c</columns>
        <columns>LastContactedCall__c</columns>
        <columns>ProductsDiscussed__c</columns>
        <columns>Store__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>OwnerFullName__c</columns>
        <columns>ReassignmentReason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Consumer</value>
        </filters>
        <label>All Leads</label>
        <sharedTo>
            <group>RetailSalesConsultant</group>
            <group>RetailStoreManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosedLeads</fullName>
        <booleanFilter>((1 AND 2) OR (1 AND 3)) AND 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ExpiryDate__c</columns>
        <columns>PreferredMethodofContact__c</columns>
        <columns>LeadStrength__c</columns>
        <columns>LastContactedSMS__c</columns>
        <columns>LastContactedCall__c</columns>
        <columns>ProductsDiscussed__c</columns>
        <columns>Store__c</columns>
        <columns>ClosedStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>ClosedStatus__c</field>
            <operation>equals</operation>
            <value>Closed - No Sale</value>
        </filters>
        <filters>
            <field>ClosedStatus__c</field>
            <operation>equals</operation>
            <value>Closed - Sale</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Consumer</value>
        </filters>
        <label>Closed Leads</label>
        <sharedTo>
            <group>RetailStoreManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContactToday</fullName>
        <columns>FULL_NAME</columns>
        <columns>ExpiryDate__c</columns>
        <columns>PreferredMethodofContact__c</columns>
        <columns>LeadStrength__c</columns>
        <columns>LastContactedSMS__c</columns>
        <columns>LastContactedCall__c</columns>
        <columns>ProductsDiscussed__c</columns>
        <columns>Store__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExpiryDate__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Consumer</value>
        </filters>
        <label>Due Today / Past Due</label>
        <sharedTo>
            <group>RetailSalesConsultant</group>
            <group>RetailStoreManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LeadsAddedLastSevenDays</fullName>
        <columns>FULL_NAME</columns>
        <columns>ExpiryDate__c</columns>
        <columns>PreferredMethodofContact__c</columns>
        <columns>LeadStrength__c</columns>
        <columns>LastContactedSMS__c</columns>
        <columns>LastContactedCall__c</columns>
        <columns>ProductsDiscussed__c</columns>
        <columns>Store__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Consumer</value>
        </filters>
        <label>Leads Added - Last 7 Days</label>
        <sharedTo>
            <group>RetailSalesConsultant</group>
            <group>RetailStoreManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PriorityLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ExpiryDate__c</columns>
        <columns>PreferredMethodofContact__c</columns>
        <columns>LeadStrength__c</columns>
        <columns>LastContactedSMS__c</columns>
        <columns>LastContactedCall__c</columns>
        <columns>ProductsDiscussed__c</columns>
        <columns>Store__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Priority</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Consumer</value>
        </filters>
        <label>Priority Leads</label>
        <sharedTo>
            <group>RetailSalesConsultant</group>
            <group>RetailStoreManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Redistribution</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Store__c</columns>
        <columns>OwnerFullName__c</columns>
        <columns>ReassignmentReason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>RJewra1</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>rthip</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>MPande1</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/8/2020 12:00 AM</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Consumer</value>
        </filters>
        <label>Redistribution</label>
    </listViews>
    <recordTypes>
        <fullName>Assigned</fullName>
        <active>true</active>
        <businessProcess>ATT Store Process</businessProcess>
        <label>Assigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consumer</fullName>
        <active>true</active>
        <businessProcess>ATT Store Process</businessProcess>
        <description>Consumer Lead Record type was created as part of the Leads MVP effort as the work is specific to individual consumers</description>
        <label>Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Long_Term_AssignedAssigned</fullName>
        <active>true</active>
        <businessProcess>ATT Store Process</businessProcess>
        <description>Long Term Leads ( &gt; 30 days )</description>
        <label>Long Term AssignedAssigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Short_Term_AssignedAssigned</fullName>
        <active>true</active>
        <businessProcess>ATT Store Process</businessProcess>
        <description>Short Term Leads (30 days)</description>
        <label>Short Term Assigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>UnAssigned</fullName>
        <active>true</active>
        <businessProcess>ATT Store Process</businessProcess>
        <label>UnAssigned</label>
    </recordTypes>
</CustomObject>